Fix contrast issues in table badges

--- a/client/app/styles/table-badge.less
+++ b/client/app/styles/table-badge.less
@@ -2,7 +2,7 @@
 
 .table-badge {
   display: block;
-  color: @basic-white;
+  color: @text-primary-color;
   border-radius: 3px;
   max-height: 30px;
   width: 150px;
@@ -16,19 +16,20 @@
   background-color: @badge-empty;
 
   &.-critical {
+    color: @basic-white;
     background-color: @badge-critical-red;
   }
   &.-error {
     background-color: @badge-error-orange;
   }
   &.-warning {
-    color: @text-primary-color;
     background-color: @badge-warning-yellow;
   }
   &.-normal {
     background-color: @badge-no-alert-green;
   }
   &.-info, &.-bestPractice {
+    color: @basic-white;
     background-color: @badge-tasks-blue;
   }
 }
